--- a/feature_engineering.ipynb
+++ b/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 1,
    "id": "cbd82b28-c7b5-4431-b191-530ce8c8f3ec",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 2,
    "id": "a7c829e2-da53-46eb-81fd-dd3afe1f794e",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 3,
    "id": "259df0af-b6dc-49b5-9fab-709b83b90eab",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 4,
    "id": "122de88b-e3b4-45c3-9291-d83f9ca3dfa6",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 5,
    "id": "f930296f-a322-41dd-bbb0-116e423ae1ab",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 6,
    "id": "3746ae32-04f7-4fae-becc-605b0f51caf0",
    "metadata": {},
    "outputs": [
@@ -305,7 +305,7 @@
        "[5 rows x 48 columns]"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 7,
    "id": "cfcf5f27-498f-4c42-ad15-5dadb8d65725",
    "metadata": {},
    "outputs": [],
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 8,
    "id": "8fe96986-d8ed-464e-98a3-509701411a2a",
    "metadata": {},
    "outputs": [],
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 9,
    "id": "43373867-d73a-43e5-97d9-e9af6f50cf08",
    "metadata": {},
    "outputs": [],
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 10,
    "id": "55543034-a0ec-4940-96b1-5b3b4ec276a1",
    "metadata": {},
    "outputs": [],
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 11,
    "id": "35d1f21c-07db-4552-bacc-e87408a8e865",
    "metadata": {},
    "outputs": [],
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 12,
    "id": "0c50cb3e-a3b0-4119-a36b-129b0b183b8c",
    "metadata": {},
    "outputs": [
@@ -626,7 +626,7 @@
        "[5 rows x 47 columns]"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 13,
    "id": "fc25ca48-84fe-424d-bd97-fc2b26d88a89",
    "metadata": {},
    "outputs": [],
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 14,
    "id": "995fb5aa-7716-4a54-8eda-652a4ba29798",
    "metadata": {},
    "outputs": [],
@@ -670,49 +670,142 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 22,
    "id": "ff04a17f-511f-4e7d-93b7-1dd111a8a727",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stored 'features_scaled' (ndarray)\n",
+      "Stored 'Y' (DataFrame)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%store features_scaled\n",
+    "%store Y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "fa021c47-ef28-44ec-a607-8fefb01eadce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import Ridge, Lasso, LinearRegression\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from validation import TimeSeriesWalkingForwardCV, TimeSeriesWindowCV\n",
+    "\n",
+    "optimizer_ridge = TimeSeriesWindowCV(Ridge, 24*30, 24*10)\n",
+    "optimizer_lasso = TimeSeriesWindowCV(Lasso, 24*30, 24*10)\n",
+    "optimizer_DT = TimeSeriesWindowCV(DecisionTreeRegressor, 24*30, 24*10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "9ee72bcd-4f2d-4321-9386-fcb80e9f4596",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "optimizer_ridge.fit(features_scaled, np.array(Y))\n",
+    "optimizer_lasso.fit(features_scaled, np.array(Y))\n",
+    "optimizer_DT.fit(features_scaled, np.array(Y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "b8162b03-9f03-4c99-a635-a3b1deaddec1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.72632949e-01 2.43265028e+00 2.97313736e+03] [1.41056028e+00 5.57926830e+00 3.32416983e+03] [5.86793269e-01 1.07003574e+01 8.46263260e+03]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(optimizer_ridge.mean_error(),\n",
+    "      optimizer_lasso.mean_error(),\n",
+    "      optimizer_DT.mean_error())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "dcdf00f7-44c6-4d89-82d8-8ec7b6fbe115",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "optimizer_ridge = TimeSeriesWalkingForwardCV(Ridge, test_size=24*10, n_splits=10)\n",
+    "optimizer_lasso = TimeSeriesWalkingForwardCV(Lasso, test_size=24*10, n_splits=10)\n",
+    "optimizer_DT = TimeSeriesWalkingForwardCV(DecisionTreeRegressor, test_size=24*10, n_splits=10)\n",
+    "\n",
+    "optimizer_ridge.fit(features_scaled, np.array(Y))\n",
+    "optimizer_lasso.fit(features_scaled, np.array(Y))\n",
+    "optimizer_DT.fit(features_scaled, np.array(Y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "f0a17a03-aebd-484d-964e-f4b0a2459fa4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2.43362732e-01 3.50172389e+00 7.05859469e+03] [2.94978265e+00 8.24545517e+00 8.26215260e+03] [1.01380417e+00 2.21091167e+01 1.39082563e+04]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(optimizer_ridge.mean_error(),\n",
+    "      optimizer_lasso.mean_error(),\n",
+    "      optimizer_DT.mean_error())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "438e27e4-44f7-43be-9234-5f069180c454",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[-9.67253964e-01, -1.30337634e-01, -9.64526719e-01, ...,\n",
-       "        -7.02354568e-01, -1.65860839e+00, -1.18619706e-02],\n",
-       "       [-1.04286561e+00,  4.96202312e-01, -9.02607069e-01, ...,\n",
-       "        -7.02354568e-01, -1.65860839e+00, -1.18619706e-02],\n",
-       "       [-1.24449667e+00,  8.52582831e-01, -8.11106372e-01, ...,\n",
-       "        -7.02354568e-01, -1.65860839e+00, -1.18619706e-02],\n",
-       "       ...,\n",
-       "       [-1.42092385e+00, -7.45381433e-01, -1.70279947e+00, ...,\n",
-       "         1.69599516e+00,  1.55327282e+00, -1.18619706e-02],\n",
-       "       [-1.62255492e+00, -3.94748987e-01, -1.75920400e+00, ...,\n",
-       "         1.69599516e+00,  1.55327282e+00, -1.18619706e-02],\n",
-       "       [-1.62255492e+00, -3.60260549e-01, -1.68650482e+00, ...,\n",
-       "        -1.73021874e+00, -2.37235977e+00,  8.43030249e+01]])"
+       "[array([1.28124947e-01, 2.85165764e+00, 3.89915802e+03]),\n",
+       " array([1.06179639e-01, 2.78537481e+00, 2.18558490e+03]),\n",
+       " array([1.43330883e-01, 3.80790257e+00, 2.09702405e+03]),\n",
+       " array([1.33790713e-01, 2.67561347e+00, 4.72870642e+03]),\n",
+       " array([1.64626099e-01, 3.74577438e+00, 6.57530096e+03]),\n",
+       " array([1.63526608e-01, 2.23798424e+00, 8.37091976e+03]),\n",
+       " array([4.75526300e-01, 8.19280866e+00, 1.59468584e+04]),\n",
+       " array([1.72658176e-01, 3.66617998e+00, 4.51670657e+03]),\n",
+       " array([7.09392163e-01, 2.38652503e+00, 1.80156329e+04]),\n",
+       " array([2.36471798e-01, 2.66741816e+00, 4.25005491e+03])]"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "features_scaled"
+    "optimizer_ridge.errors"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21687074-bde5-47bf-a3ba-42dd96b54ad1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fa021c47-ef28-44ec-a607-8fefb01eadce",
+   "id": "1b37e246-299d-404d-9de5-439cd9eed719",
    "metadata": {},
    "outputs": [],
    "source": []
