--- a/models_test.ipynb
+++ b/models_test.ipynb
@@ -2,11 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "a89d8e5e-d607-4cc1-b770-c1b92b829868",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "\n",
     "from sklearn.linear_model import Ridge, Lasso, LinearRegression\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
     "from validation import TimeSeriesWalkingForwardCV, TimeSeriesWindowCV\n",
@@ -18,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "2d9b4b4a-9682-4022-b8a8-a296e95cecb0",
    "metadata": {},
    "outputs": [],
@@ -29,23 +31,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "7b10dfa0-1f9e-4a61-908a-b8b1a53c1454",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'np' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-4-7ccfa6e70e24>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0moptimizer_ridge\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfeatures_scaled\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mY\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0moptimizer_lasso\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfeatures_scaled\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mY\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0moptimizer_DT\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfeatures_scaled\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mY\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'np' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.72632949e-01 2.43265028e+00 2.97313736e+03] [1.41056028e+00 5.57926830e+00 3.32416983e+03] [5.53509615e-01 9.83314263e+00 8.99183420e+03]\n"
      ]
     }
    ],
    "source": [
+    "optimizer_ridge.fit(features_scaled, np.array(Y))\n",
+    "optimizer_lasso.fit(features_scaled, np.array(Y))\n",
+    "optimizer_DT.fit(features_scaled, np.array(Y))\n",
+    "\n",
+    "print(optimizer_ridge.mean_error(),\n",
+    "      optimizer_lasso.mean_error(),\n",
+    "      optimizer_DT.mean_error())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "20a1804d-feb8-4033-9d8c-5b789be3b665",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "optimizer_ridge = TimeSeriesWalkingForwardCV(Ridge, test_size=24*10, n_splits=10)\n",
+    "optimizer_lasso = TimeSeriesWalkingForwardCV(Lasso, test_size=24*10, n_splits=10)\n",
+    "optimizer_DT = TimeSeriesWalkingForwardCV(DecisionTreeRegressor, test_size=24*10, n_splits=10)\n",
+    "\n",
     "optimizer_ridge.fit(features_scaled, np.array(Y))\n",
     "optimizer_lasso.fit(features_scaled, np.array(Y))\n",
     "optimizer_DT.fit(features_scaled, np.array(Y))"
@@ -53,8 +71,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "id": "38a3e1bf-ea2d-428b-a12f-c2c3a2adc423",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2.43362732e-01 3.50172389e+00 7.05859469e+03] [2.94978265e+00 8.24545517e+00 8.26215260e+03] [9.70129167e-01 2.04424792e+01 1.30877476e+04]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(optimizer_ridge.mean_error(),\n",
+    "      optimizer_lasso.mean_error(),\n",
+    "      optimizer_DT.mean_error())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "20a1804d-feb8-4033-9d8c-5b789be3b665",
+   "id": "951aecad-a04f-4ac6-9a06-a48c75756919",
    "metadata": {},
    "outputs": [],
    "source": []
