--- a/models_test.ipynb
+++ b/models_test.ipynb
@@ -39,7 +39,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.17210655655244042, 2.3899640739134447, 2970.766565510177] [0.31826607472413876, 2.372499696839336, 2978.670276663507] [0.5969150641025643, 10.341770833333335, 8850.35161057692]\n"
+      "[0.17210655655244042, 2.3899640739134447, 2970.766565510177] [0.31826607472413876, 2.372499696839336, 2978.670276663507] [0.6040272435897438, 10.582932692307692, 8471.791424679486]\n"
      ]
     }
    ],
@@ -55,13 +55,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "20a1804d-feb8-4033-9d8c-5b789be3b665",
    "metadata": {},
    "outputs": [],
    "source": [
-    "optimizer_ridge = TimeSeriesWalkingForwardCV(Ridge, test_size=24*10, n_splits=10)\n",
-    "optimizer_lasso = TimeSeriesWalkingForwardCV(Lasso, test_size=24*10, n_splits=10)\n",
+    "optimizer_ridge = TimeSeriesWalkingForwardCV(Ridge, test_size=24*10, n_splits=10, param_grid={'alpha': [0.05, 0.1, 0.5, 1, 2, 5], 'tol':[1e-4, 1e-3, 1e-2]})\n",
+    "optimizer_lasso = TimeSeriesWalkingForwardCV(Lasso, test_size=24*10, n_splits=10, param_grid={'alpha': [0.05, 0.1, 0.5, 1, 2, 5], 'tol':[1e-4, 1e-3, 1e-2], 'max_iter': [1000000]})\n",
     "optimizer_DT = TimeSeriesWalkingForwardCV(DecisionTreeRegressor, test_size=24*10, n_splits=10)\n",
     "\n",
     "optimizer_ridge.fit(features_scaled, np.array(Y))\n",
@@ -71,18 +71,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "38a3e1bf-ea2d-428b-a12f-c2c3a2adc423",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.2433627324811174, 3.501723893932586, 7058.594685727166] [2.949782647677113, 8.245455168749102, 8262.152595336362] [1.0734708333333334, 21.692083333333333, 14807.859966666674]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(optimizer_ridge.best_errors,\n",
     "      optimizer_lasso.best_errors,\n",
