--- a/feature_engineering.ipynb
+++ b/feature_engineering.ipynb
@@ -28,7 +28,7 @@
    },
    "outputs": [],
    "source": [
-    "data = pd.read_csv(\"train.csv\")\n",
+    "data = pd.read_csv(\"data/train.csv\")\n",
     "\n",
     "targets = data.columns[-3:]"
    ]
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 54,
    "id": "05660375-d3ef-41be-8d0e-a9a0f3b57493",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 55,
    "id": "f930296f-a322-41dd-bbb0-116e423ae1ab",
    "metadata": {
     "pycharm": {
@@ -101,9 +101,9 @@
    },
    "outputs": [],
    "source": [
-    "window_sliding(data_cp, dict(zip(list(targets) + list(sensors), [{np.max: [24], np.min: [24], np.std: [24], np.average: [24]}, \n",
-    "                                                           {np.max: [24], np.min: [24], np.std: [24], np.average: [24]}, \n",
-    "                                                           {np.max: [24], np.min: [24], np.std: [24], np.average: [24]},\n",
+    "window_sliding(data_cp, dict(zip(list(targets) + list(sensors), [{np.max: [72, 48, 24], np.min: [72, 48, 24], np.std: [72, 48, 24], np.average: [72, 48, 24]}, \n",
+    "                                                           {np.max: [72, 48, 24], np.min: [72, 48, 24], np.std: [72, 48, 24], np.average: [72, 48, 24]}, \n",
+    "                                                           {np.max: [72, 48, 24], np.min: [72, 48, 24], np.std: [72, 48, 24], np.average: [72, 48, 24]},\n",
     "                                                                {np.max: [24], np.min: [24], np.std: [24], np.average: [24]},\n",
     "                                                                {np.max: [24], np.min: [24], np.std: [24], np.average: [24]},\n",
     "                                                                {np.max: [24], np.min: [24], np.std: [24], np.average: [24]},\n",
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 56,
    "id": "3746ae32-04f7-4fae-becc-605b0f51caf0",
    "metadata": {},
    "outputs": [
@@ -286,7 +286,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 44 columns</p>\n",
+       "<p>5 rows × 68 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -332,10 +332,10 @@
        "3           1171.125000  \n",
        "4           1163.340000  \n",
        "\n",
-       "[5 rows x 44 columns]"
+       "[5 rows x 68 columns]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 57,
    "id": "cfcf5f27-498f-4c42-ad15-5dadb8d65725",
    "metadata": {
     "pycharm": {
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 58,
    "id": "8fe96986-d8ed-464e-98a3-509701411a2a",
    "metadata": {
     "pycharm": {
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 59,
    "id": "43373867-d73a-43e5-97d9-e9af6f50cf08",
    "metadata": {
     "pycharm": {
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 60,
    "id": "55543034-a0ec-4940-96b1-5b3b4ec276a1",
    "metadata": {
     "pycharm": {
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 61,
    "id": "35d1f21c-07db-4552-bacc-e87408a8e865",
    "metadata": {
     "pycharm": {
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 62,
    "id": "0c50cb3e-a3b0-4119-a36b-129b0b183b8c",
    "metadata": {
     "pycharm": {
@@ -474,16 +474,16 @@
        "      <th>target_carbon_monoxide</th>\n",
        "      <th>target_benzene</th>\n",
        "      <th>target_nitrogen_oxides</th>\n",
+       "      <th>target_carbon_monoxide_amax_72h</th>\n",
+       "      <th>target_carbon_monoxide_amax_48h</th>\n",
        "      <th>target_carbon_monoxide_amax_24h</th>\n",
-       "      <th>target_carbon_monoxide_amax_12h</th>\n",
-       "      <th>target_carbon_monoxide_amax_6h</th>\n",
+       "      <th>target_carbon_monoxide_amin_72h</th>\n",
+       "      <th>target_carbon_monoxide_amin_48h</th>\n",
        "      <th>target_carbon_monoxide_amin_24h</th>\n",
-       "      <th>target_carbon_monoxide_amin_12h</th>\n",
-       "      <th>target_carbon_monoxide_amin_6h</th>\n",
-       "      <th>target_carbon_monoxide_std_24h</th>\n",
+       "      <th>target_carbon_monoxide_std_72h</th>\n",
        "      <th>...</th>\n",
-       "      <th>target_nitrogen_oxides_average_12h</th>\n",
-       "      <th>target_nitrogen_oxides_average_6h</th>\n",
+       "      <th>sensor_5_std_24h</th>\n",
+       "      <th>sensor_5_average_24h</th>\n",
        "      <th>target_carbon_monoxide_diff</th>\n",
        "      <th>target_benzene_diff</th>\n",
        "      <th>target_nitrogen_oxides_diff</th>\n",
@@ -508,8 +508,8 @@
        "      <td>2.5</td>\n",
        "      <td>NaN</td>\n",
        "      <td>...</td>\n",
-       "      <td>167.700000</td>\n",
-       "      <td>167.700000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1293.400000</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -532,8 +532,8 @@
        "      <td>2.1</td>\n",
        "      <td>0.282843</td>\n",
        "      <td>...</td>\n",
-       "      <td>133.300000</td>\n",
-       "      <td>133.300000</td>\n",
+       "      <td>199.757666</td>\n",
+       "      <td>1152.150000</td>\n",
        "      <td>-0.4</td>\n",
        "      <td>-2.1</td>\n",
        "      <td>-68.8</td>\n",
@@ -556,8 +556,8 @@
        "      <td>2.1</td>\n",
        "      <td>0.208167</td>\n",
        "      <td>...</td>\n",
-       "      <td>131.233333</td>\n",
-       "      <td>131.233333</td>\n",
+       "      <td>142.700397</td>\n",
+       "      <td>1140.433333</td>\n",
        "      <td>0.1</td>\n",
        "      <td>-0.7</td>\n",
        "      <td>28.2</td>\n",
@@ -580,8 +580,8 @@
        "      <td>2.1</td>\n",
        "      <td>0.173205</td>\n",
        "      <td>...</td>\n",
-       "      <td>142.725000</td>\n",
-       "      <td>142.725000</td>\n",
+       "      <td>131.694783</td>\n",
+       "      <td>1171.125000</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.5</td>\n",
        "      <td>50.1</td>\n",
@@ -604,8 +604,8 @@
        "      <td>1.5</td>\n",
        "      <td>0.367423</td>\n",
        "      <td>...</td>\n",
-       "      <td>138.540000</td>\n",
-       "      <td>138.540000</td>\n",
+       "      <td>115.371868</td>\n",
+       "      <td>1163.340000</td>\n",
        "      <td>-0.7</td>\n",
        "      <td>-3.3</td>\n",
        "      <td>-55.4</td>\n",
@@ -617,7 +617,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 47 columns</p>\n",
+       "<p>5 rows × 67 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -628,59 +628,59 @@
        "3                     2.2             9.7                   177.2   \n",
        "4                     1.5             6.4                   121.8   \n",
        "\n",
-       "   target_carbon_monoxide_amax_24h  target_carbon_monoxide_amax_12h  \\\n",
+       "   target_carbon_monoxide_amax_72h  target_carbon_monoxide_amax_48h  \\\n",
        "0                              2.5                              2.5   \n",
        "1                              2.5                              2.5   \n",
        "2                              2.5                              2.5   \n",
        "3                              2.5                              2.5   \n",
        "4                              2.5                              2.5   \n",
        "\n",
-       "   target_carbon_monoxide_amax_6h  target_carbon_monoxide_amin_24h  \\\n",
-       "0                             2.5                              2.5   \n",
-       "1                             2.5                              2.1   \n",
-       "2                             2.5                              2.1   \n",
-       "3                             2.5                              2.1   \n",
-       "4                             2.5                              1.5   \n",
+       "   target_carbon_monoxide_amax_24h  target_carbon_monoxide_amin_72h  \\\n",
+       "0                              2.5                              2.5   \n",
+       "1                              2.5                              2.1   \n",
+       "2                              2.5                              2.1   \n",
+       "3                              2.5                              2.1   \n",
+       "4                              2.5                              1.5   \n",
        "\n",
-       "   target_carbon_monoxide_amin_12h  target_carbon_monoxide_amin_6h  \\\n",
-       "0                              2.5                             2.5   \n",
-       "1                              2.1                             2.1   \n",
-       "2                              2.1                             2.1   \n",
-       "3                              2.1                             2.1   \n",
-       "4                              1.5                             1.5   \n",
+       "   target_carbon_monoxide_amin_48h  target_carbon_monoxide_amin_24h  \\\n",
+       "0                              2.5                              2.5   \n",
+       "1                              2.1                              2.1   \n",
+       "2                              2.1                              2.1   \n",
+       "3                              2.1                              2.1   \n",
+       "4                              1.5                              1.5   \n",
        "\n",
-       "   target_carbon_monoxide_std_24h  ...  target_nitrogen_oxides_average_12h  \\\n",
-       "0                             NaN  ...                          167.700000   \n",
-       "1                        0.282843  ...                          133.300000   \n",
-       "2                        0.208167  ...                          131.233333   \n",
-       "3                        0.173205  ...                          142.725000   \n",
-       "4                        0.367423  ...                          138.540000   \n",
+       "   target_carbon_monoxide_std_72h  ...  sensor_5_std_24h  \\\n",
+       "0                             NaN  ...               NaN   \n",
+       "1                        0.282843  ...        199.757666   \n",
+       "2                        0.208167  ...        142.700397   \n",
+       "3                        0.173205  ...        131.694783   \n",
+       "4                        0.367423  ...        115.371868   \n",
        "\n",
-       "   target_nitrogen_oxides_average_6h  target_carbon_monoxide_diff  \\\n",
-       "0                         167.700000                          NaN   \n",
-       "1                         133.300000                         -0.4   \n",
-       "2                         131.233333                          0.1   \n",
-       "3                         142.725000                          0.0   \n",
-       "4                         138.540000                         -0.7   \n",
+       "   sensor_5_average_24h  target_carbon_monoxide_diff  target_benzene_diff  \\\n",
+       "0           1293.400000                          NaN                  NaN   \n",
+       "1           1152.150000                         -0.4                 -2.1   \n",
+       "2           1140.433333                          0.1                 -0.7   \n",
+       "3           1171.125000                          0.0                  0.5   \n",
+       "4           1163.340000                         -0.7                 -3.3   \n",
        "\n",
-       "   target_benzene_diff  target_nitrogen_oxides_diff  season  date_time_hour  \\\n",
-       "0                  NaN                          NaN     1.0              18   \n",
-       "1                 -2.1                        -68.8     1.0              19   \n",
-       "2                 -0.7                         28.2     1.0              20   \n",
-       "3                  0.5                         50.1     1.0              21   \n",
-       "4                 -3.3                        -55.4     1.0              22   \n",
+       "   target_nitrogen_oxides_diff  season  date_time_hour  date_time_day  \\\n",
+       "0                          NaN     1.0              18             10   \n",
+       "1                        -68.8     1.0              19             10   \n",
+       "2                         28.2     1.0              20             10   \n",
+       "3                         50.1     1.0              21             10   \n",
+       "4                        -55.4     1.0              22             10   \n",
        "\n",
-       "   date_time_day  date_time_month  date_time_year  \n",
-       "0             10                3            2010  \n",
-       "1             10                3            2010  \n",
-       "2             10                3            2010  \n",
-       "3             10                3            2010  \n",
-       "4             10                3            2010  \n",
+       "   date_time_month  date_time_year  \n",
+       "0                3            2010  \n",
+       "1                3            2010  \n",
+       "2                3            2010  \n",
+       "3                3            2010  \n",
+       "4                3            2010  \n",
        "\n",
-       "[5 rows x 47 columns]"
+       "[5 rows x 67 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 63,
    "id": "58638379-2718-4a73-b396-3098ee8aef51",
    "metadata": {
     "pycharm": {
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 64,
    "id": "fc25ca48-84fe-424d-bd97-fc2b26d88a89",
    "metadata": {
     "pycharm": {
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 65,
    "id": "995fb5aa-7716-4a54-8eda-652a4ba29798",
    "metadata": {
     "pycharm": {
@@ -755,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 66,
    "id": "ff04a17f-511f-4e7d-93b7-1dd111a8a727",
    "metadata": {
     "pycharm": {
@@ -793,6 +793,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6e416928-caf0-4036-9607-e9142e912ef6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7469e665-5e3b-48e2-ba8e-e77945a82753",
    "metadata": {},
    "outputs": [],
    "source": []
