Models and data saving

--- a/feature_engineering.ipynb
+++ b/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 17,
    "id": "cbd82b28-c7b5-4431-b191-530ce8c8f3ec",
    "metadata": {
     "pycharm": {
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 18,
    "id": "a7c829e2-da53-46eb-81fd-dd3afe1f794e",
    "metadata": {
     "pycharm": {
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 19,
    "id": "259df0af-b6dc-49b5-9fab-709b83b90eab",
    "metadata": {
     "pycharm": {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 20,
    "id": "122de88b-e3b4-45c3-9291-d83f9ca3dfa6",
    "metadata": {
     "pycharm": {
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 21,
    "id": "05660375-d3ef-41be-8d0e-a9a0f3b57493",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 22,
    "id": "f930296f-a322-41dd-bbb0-116e423ae1ab",
    "metadata": {
     "pycharm": {
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 23,
    "id": "3746ae32-04f7-4fae-becc-605b0f51caf0",
    "metadata": {},
    "outputs": [
@@ -335,7 +335,7 @@
        "[5 rows x 68 columns]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 24,
    "id": "cfcf5f27-498f-4c42-ad15-5dadb8d65725",
    "metadata": {
     "pycharm": {
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 25,
    "id": "8fe96986-d8ed-464e-98a3-509701411a2a",
    "metadata": {
     "pycharm": {
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 26,
    "id": "43373867-d73a-43e5-97d9-e9af6f50cf08",
    "metadata": {
     "pycharm": {
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 27,
    "id": "55543034-a0ec-4940-96b1-5b3b4ec276a1",
    "metadata": {
     "pycharm": {
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 28,
    "id": "35d1f21c-07db-4552-bacc-e87408a8e865",
    "metadata": {
     "pycharm": {
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 29,
    "id": "0c50cb3e-a3b0-4119-a36b-129b0b183b8c",
    "metadata": {
     "pycharm": {
@@ -680,7 +680,7 @@
        "[5 rows x 67 columns]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 30,
    "id": "58638379-2718-4a73-b396-3098ee8aef51",
    "metadata": {
     "pycharm": {
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 31,
    "id": "fc25ca48-84fe-424d-bd97-fc2b26d88a89",
    "metadata": {
     "pycharm": {
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 32,
    "id": "995fb5aa-7716-4a54-8eda-652a4ba29798",
    "metadata": {
     "pycharm": {
@@ -755,47 +755,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 36,
+   "id": "5dfb8582-eac0-470f-9f64-ffbc692bffa6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "from os import makedirs\n",
+    "\n",
+    "def save_data(folder_name: str, fetures_scaled, Y, data):\n",
+    "    makedirs(f'data/{folder_name}')\n",
+    "    data.to_csv(f'data/{folder_name}/data.csv')\n",
+    "    Y.to_csv(f'data/{folder_name}/y.csv')\n",
+    "    pickle.dump(features_scaled, open(f'data/{folder_name}/features_scaled', 'wb'))  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "id": "ff04a17f-511f-4e7d-93b7-1dd111a8a727",
    "metadata": {
     "pycharm": {
      "is_executing": false
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Stored 'features_scaled' (ndarray)\n",
-      "Stored 'Y' (DataFrame)\n",
-      "Stored 'features' (list)\n",
-      "Stored 'data_cp' (DataFrame)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%store features_scaled\n",
-    "%store Y\n",
-    "%store features\n",
-    "%store data_cp"
+    "save_data('data_v1', features_scaled, Y, data_cp)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7385498a-f92a-45d8-8f06-2c17a9c3c81e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6e416928-caf0-4036-9607-e9142e912ef6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
