--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "id": "da120b50-e069-40a8-9eb8-78ff3a66b55c",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "8cbf576d-9511-40e4-ab7f-c83419bded45",
    "metadata": {},
    "outputs": [
@@ -30,7 +30,7 @@
        "<module 'training' from 'C:\\\\Users\\\\asus\\\\Python\\\\PollutionAnalysis\\\\training.py'>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "41f0a433-e73c-4fda-9880-5592ad60f9af",
    "metadata": {},
    "outputs": [],
@@ -73,12 +73,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "87ccf85c-0015-4453-8e74-e2aa92f54ba6",
    "metadata": {},
    "outputs": [],
    "source": [
     "features_scaled = pickle.load(open('data/data_v4.1/features_scaled', 'rb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "99395d9f-63e1-4eef-8f15-008d726a487d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features_scaled_v4 = pickle.load(open('data/data_v4/features_scaled', 'rb'))"
    ]
   },
   {
@@ -238,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "34475cd8-7bcc-472c-9014-fa7f9b0c88aa",
    "metadata": {},
    "outputs": [],
@@ -251,7 +261,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
+   "id": "81e58d9c-b56a-4d18-adcb-722480a2d75a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stacking = pickle.load(open('models/stacking_v1_data_v4', 'rb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "e2f28fde-5ebd-4de6-a668-920afaa48635",
    "metadata": {},
    "outputs": [],
@@ -261,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "id": "34aeb607-85d0-4324-8acc-fa537a2e9eb7",
    "metadata": {},
    "outputs": [],
@@ -269,24 +289,25 @@
     "result_boost = predict(xgboost, data.iloc[-h, 1:])\n",
     "result_lasso = predict(lasso, features_scaled[-h])\n",
     "result_ridge = predict(ridge, features_scaled[-h])\n",
-    "result_forest = predict(forest, data.iloc[-h, 1:])"
+    "result_forest = predict(forest, data.iloc[-h, 1:])\n",
+    "result_stacking = predict(stacking, features_scaled_v4[-h])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "id": "a0a1cc3f-c523-40bf-8026-fdaaa5d1d13b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "models = [xgboost, lasso, ridge, forest]\n",
+    "models = [xgboost, lasso, ridge, forest, stacking]\n",
     "metrics_list = [metrics.MAE, metrics.RelativeAE]\n",
-    "results = [result_boost, result_lasso, result_ridge, result_forest]"
+    "results = [result_boost, result_lasso, result_ridge, result_forest, result_stacking]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "id": "8a79f97e-1cef-4f9f-893c-ebc2691f3385",
    "metadata": {},
    "outputs": [],
@@ -296,19 +317,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 26,
    "id": "b4994698-1640-439f-94c7-5e5799411ae6",
    "metadata": {},
    "outputs": [],
    "source": [
     "tables = [[[metric(result, Y_test)[i] for metric in metrics_list] for result in results] for i in range(3)]\n",
     "\n",
-    "df_tables = [pd.DataFrame(table, columns=['MAE', 'RelativeAE'], index=['xgboost', 'lasso', 'ridge', 'forest']) for table in tables]"
+    "df_tables = [pd.DataFrame(table, columns=['MAE', 'RelativeAE'], index=['xgboost', 'lasso', 'ridge', 'forest', 'stacking']) for table in tables]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 27,
    "id": "f52a3753-622a-4788-bfad-a4d3e2da582c",
    "metadata": {},
    "outputs": [],
@@ -318,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 28,
    "id": "e6d52655-7ea2-451e-b1a1-0ebfdcfe15d3",
    "metadata": {},
    "outputs": [
@@ -394,33 +415,54 @@
        "      <td>238.175207</td>\n",
        "      <td>0.750804</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>stacking</th>\n",
+       "      <td>1.363722</td>\n",
+       "      <td>0.579793</td>\n",
+       "      <td>5.798656</td>\n",
+       "      <td>0.719808</td>\n",
+       "      <td>242.274836</td>\n",
+       "      <td>0.763727</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        carbon_monoxide              benzene            nitrogen_oxides  \\\n",
-       "                    MAE RelativeAE       MAE RelativeAE             MAE   \n",
-       "xgboost        1.593663   0.677554  6.303759   0.782509      183.109398   \n",
-       "lasso          1.603478   0.681727  6.592939   0.818406      246.810162   \n",
-       "ridge          1.726971   0.734230  7.407197   0.919482      241.309266   \n",
-       "forest         1.873136   0.796373  7.799239   0.968148      238.175207   \n",
+       "         carbon_monoxide              benzene            nitrogen_oxides  \\\n",
+       "                     MAE RelativeAE       MAE RelativeAE             MAE   \n",
+       "xgboost         1.593663   0.677554  6.303759   0.782509      183.109398   \n",
+       "lasso           1.603478   0.681727  6.592939   0.818406      246.810162   \n",
+       "ridge           1.726971   0.734230  7.407197   0.919482      241.309266   \n",
+       "forest          1.873136   0.796373  7.799239   0.968148      238.175207   \n",
+       "stacking        1.363722   0.579793  5.798656   0.719808      242.274836   \n",
        "\n",
-       "                    \n",
-       "        RelativeAE  \n",
-       "xgboost   0.577219  \n",
-       "lasso     0.778024  \n",
-       "ridge     0.760683  \n",
-       "forest    0.750804  "
+       "                     \n",
+       "         RelativeAE  \n",
+       "xgboost    0.577219  \n",
+       "lasso      0.778024  \n",
+       "ridge      0.760683  \n",
+       "forest     0.750804  \n",
+       "stacking   0.763727  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "errors"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf852ec2-4f2e-456b-a15d-97643ec47c94",
+   "metadata": {},
+   "source": [
+    "### Итог\n",
+    "\n",
+    "Для предсказания carbon_monoxide и benzene можно использовать стэкинг моделей. На nitrogen_oxides лучше всего работает градиентный бустинг."
    ]
   }
  ],
