--- a/feature_engineering.ipynb
+++ b/feature_engineering.ipynb
@@ -351,7 +351,11 @@
    "cell_type": "code",
    "execution_count": 25,
    "id": "435d8df0-597b-46e5-b417-aad07057dfd5",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "diff(dict(zip(targets, [2, 2, 2])))"
@@ -360,7 +364,11 @@
   {
    "cell_type": "markdown",
    "id": "1dbeb373-4a00-4b27-968a-1f19a9deeea1",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Также сделаем отдельные параметры для дня, месяца, года. Также сделаем отдельный параметр для сезонов, как это было сделано в EDA"
    ]
@@ -421,7 +429,8 @@
    "id": "0c50cb3e-a3b0-4119-a36b-129b0b183b8c",
    "metadata": {
     "pycharm": {
-     "is_executing": false
+     "is_executing": false,
+     "name": "#%%\n"
     }
    },
    "outputs": [
@@ -667,7 +676,11 @@
   {
    "cell_type": "markdown",
    "id": "79f5a351-239a-450e-add6-44f8691f4d30",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Также нам может понадобиться масштабирование признаков. Если этого не сделать, то в случае применения регуляризации модель будет работать хуже, так как у малых по модулю признаков, возможно, будут большие веса, а регуляризация \"штрафует\" за это. Также масштабирование повысит интерпретируемость, так как веса можно будет понимать как важность признака."
    ]
@@ -678,7 +691,8 @@
    "id": "fc25ca48-84fe-424d-bd97-fc2b26d88a89",
    "metadata": {
     "pycharm": {
-     "is_executing": false
+     "is_executing": false,
+     "name": "#%%\n"
     }
    },
    "outputs": [],
@@ -718,22 +732,6 @@
    "source": [
     "save_data('data_v4.1', features_scaled, Y, data_cp)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a3d8e889-3b48-4b81-b515-4002c950f942",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8ad9411d-4361-48fd-bcb0-37a74718a766",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -753,6 +751,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.5"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
